<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.microprofile-ext</groupId>
        <artifactId>health-ext</artifactId>
        <version>1.1.1-SNAPSHOT</version>
    </parent>
    
    <groupId>org.microprofile-ext.health-ext</groupId>
    <artifactId>health-example</artifactId>
    <packaging>war</packaging>
    
    <name>Microprofile Health Extensions :: Example</name>
    <description>A basic Example of these extensions</description>
    
    <properties>
        <failOnMissingWebXml>false</failOnMissingWebXml>
    </properties>
    
    <dependencies>
        <dependency>
            <groupId>org.microprofile-ext.health-ext</groupId>
            <artifactId>healthprobe-system</artifactId>
            <version>${project.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.microprofile-ext.health-ext</groupId>
            <artifactId>healthprobe-jvm</artifactId>
            <version>${project.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.microprofile-ext.health-ext</groupId>
            <artifactId>health-ui</artifactId>
            <version>${project.version}</version>
            <scope>runtime</scope>
        </dependency>
    </dependencies>
    
    <build>
        <finalName>${project.artifactId}</finalName>
    </build>
    
    <profiles>
        
        <!-- Run Payara -->
        <profile>
            <id>payara</id>
            <activation>
                <property>
                    <name>payara</name>
                </property>
            </activation>
            
            <properties>
                <!-- payara-micro properties -->
                <payara-micro.maven.version>1.0.7</payara-micro.maven.version>
                <payara-micro.version>5.2020.2</payara-micro.version>
                <payara-micro.installDir>${java.io.tmpdir}${file.separator}${project.artifactId}${file.separator}payara-micro</payara-micro.installDir>
                <payara-micro.configDir>${basedir}${file.separator}src${file.separator}main${file.separator}payara-micro${file.separator}config</payara-micro.configDir>
                <payara-micro.logsDir>${payara-micro.installDir}${file.separator}logs</payara-micro.logsDir>
                <payara-micro.logfile>${payara-micro.logsDir}${file.separator}server.log</payara-micro.logfile>
            </properties>
            
            <dependencyManagement>
                <dependencies>
                    <dependency>
                        <groupId>fish.payara.extras</groupId>
                        <artifactId>payara-micro</artifactId>
                        <version>${payara-micro.version}</version>
                        <scope>provided</scope>
                    </dependency>
                </dependencies>
            </dependencyManagement>
            
            <dependencies>
                <!-- Payara -->
                <dependency>
                    <groupId>fish.payara.extras</groupId>
                    <artifactId>payara-micro</artifactId>
                    <scope>provided</scope>
                </dependency>
            </dependencies>
            
            <build>
                <plugins>
                    <plugin>
                        <groupId>fish.payara.maven.plugins</groupId>
                        <artifactId>payara-micro-maven-plugin</artifactId>
                        <version>${payara-micro.maven.version}</version>
                        
                        <configuration>
                            <artifactItem>
                                <groupId>fish.payara.extras</groupId>
                                <artifactId>payara-micro</artifactId>
                                <version>${payara-micro.version}</version>
                            </artifactItem>
                            <payaraVersion>${payara-micro.version}</payaraVersion>
                            <commandLineOptions>
                                <option>
                                    <key>--rootdir</key>
                                    <value>${payara-micro.installDir}</value>
                                </option>
                            </commandLineOptions>
                            <deployArtifacts>
                                <artifactItem>
                                    <groupId>${project.groupId}</groupId>
                                    <artifactId>${project.artifactId}</artifactId>
                                    <version>${project.version}</version>
                                    <type>${project.packaging}</type>
                                </artifactItem>                       
                            </deployArtifacts>
                        
                            <useUberJar>false</useUberJar>
                            <daemon>false</daemon>
                            <deployWar>true</deployWar>
                        </configuration>
                        <executions>
                            <execution>
                                <id>1</id>
                                <phase>pre-integration-test</phase>
                                <goals>
                                    <goal>start</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
            
        </profile>
        
        <!-- Run OpenLiberty -->
        <profile>
            <id>openliberty</id>
            <activation>
                <property>
                    <name>openliberty</name>
                </property>
            </activation>
            
            <properties>
                <log.name>org.microprofileext.health</log.name>
                <log.level>FINEST</log.level>
                <openliberty.version>20.0.0.7</openliberty.version>
                <openliberty.http.port>8080</openliberty.http.port>
                <openliberty.https.port>8443</openliberty.https.port>
                <openliberty.installDir>${java.io.tmpdir}${file.separator}${project.artifactId}${file.separator}openliberty</openliberty.installDir>
                <openliberty.configDir>${basedir}${file.separator}src${file.separator}main${file.separator}openliberty${file.separator}config</openliberty.configDir>
                <openliberty.logsDir>${openliberty.installDir}${file.separator}wlp${file.separator}usr${file.separator}servers${file.separator}defaultServer${file.separator}logs</openliberty.logsDir>
                <openliberty.maven.version>2.7</openliberty.maven.version>
            </properties>
            
            <build>
                <plugins>
                    <!-- Copy config (with resource filter) -->
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build-helper-maven-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <id>add-resource</id>
                                <phase>generate-resources</phase>
                                <goals>
                                    <goal>add-resource</goal>
                                </goals>
                                <configuration>

                                    <resources>
                                        <!-- Open Liberty config -->
                                        <resource>
                                            <directory>${openliberty.configDir}</directory>
                                            <targetPath>${project.build.directory}</targetPath>
                                            <filtering>true</filtering>
                                            <includes>
                                                <include>server.xml</include>
                                            </includes>
                                        </resource>
                                    </resources>

                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- Open Liberty plugin -->

                    <plugin>
                        <groupId>net.wasdev.wlp.maven.plugins</groupId>
                        <artifactId>liberty-maven-plugin</artifactId>
                        <version>${openliberty.maven.version}</version>
                        
                        <configuration>
                            <assemblyArtifact>
                                <groupId>io.openliberty</groupId>
                                <artifactId>openliberty-runtime</artifactId>
                                <version>${openliberty.version}</version>
                                <type>zip</type>
                            </assemblyArtifact>
                            <configFile>${project.build.directory}${file.separator}server.xml</configFile>
                        </configuration>
                        
                        <executions>
                            <execution>
                                <id>1</id>
                                <phase>install</phase>
                                <goals>
                                    <goal>install-server</goal>
                                    <goal>create-server</goal>
                                </goals>
                    
                                <configuration>
                                    <configFile>${project.build.directory}${file.separator}server.xml</configFile>
                                    <serverName>defaultServer</serverName>
                                    <bootstrapProperties>
                                        <httpPort>${openliberty.http.port}</httpPort>
                                        <httpsPort>${openliberty.https.port}</httpsPort>
                                    </bootstrapProperties>
                                </configuration>
                            </execution>
                            
                            <execution>
                                <id>2</id>
                                <phase>install</phase>
                                <goals>
                                    <goal>install-apps</goal>
                                </goals>
                    
                                <configuration>
                                    <appsDirectory>apps</appsDirectory>
                                    <stripVersion>true</stripVersion>
                                    <installAppPackages>project</installAppPackages>
                                    <looseApplication>true</looseApplication>
                                    <installDirectory>${project.build.directory}${file.separator}liberty${file.separator}wlp</installDirectory>
                                    <serverName>defaultServer</serverName>
                                </configuration>
                            </execution>
                            
                            <execution>
                                <id>3</id>
                                <phase>install</phase>
                                <goals>
                                    <goal>run-server</goal>    
                                </goals>
                    
                                <configuration>
                                    <configFile>${project.build.directory}${file.separator}server.xml</configFile>
                                    <installDirectory>${project.build.directory}${file.separator}liberty${file.separator}wlp</installDirectory>
                                    <serverName>defaultServer</serverName>
                                    <bootstrapProperties>
                                        <httpPort>${openliberty.http.port}</httpPort>
                                        <httpsPort>${openliberty.https.port}</httpsPort>
                                    </bootstrapProperties>
                                </configuration>
                            </execution>
                        </executions>
                        
                    </plugin>


                </plugins>
            </build>
            
        </profile>
        
        <profile>
            <id>jdk11plus</id>
            <activation>
                <jdk>[11,)</jdk>
            </activation>
            <properties>
                <jboss.extra.opts>--add-modules java.se</jboss.extra.opts>
                <maven.compiler.release>8</maven.compiler.release>
            </properties>
        </profile>
    </profiles>
    
</project>